# tally

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  conftest.py  pyproject.toml  requirements.txt  tally.spec
.cursor/rules/: create-test.mdc
.github/workflows/: release.yml  test.yml
scripts/: build.ps1  build.sh  install.ps1  install.sh
src/tally/: __main__.py  cli.py
src/tally/actions/export/: export.py  save_activity.py
src/tally/actions/initialize/: create_tables.py  initialize.py  user_list.py
src/tally/actions/load/: activity_list.py  load.py
src/tally/actions/reset/: reset.py
src/tally/actions/score/: point_system.py  save_score.py  score.py  score_config.py  team_score.py  user_active_time.py  user_score.py
src/tally/models/: activity.py  base.py  config.py  team.py  user.py
src/tally/services/: db.py  strava.py
src/tally/utils/: activity.py  date.py  file.py  user.py
templates/: activity_import_template.csv  user_team_registration_template.csv
tests/tally/export/: test_save_activity.py
tests/tally/mocks/: mock_activity.py  mock_club_feed.py  mock_config.py  mock_db.py  mock_team.py  mock_user.py
tests/tally/models/: test_club_feed_validation.py
tests/tally/score/: test_calculate_team_bonus_points.py  test_calculate_user_bonus_points.py  test_calculate_user_points.py  test_get_team_cumulative_score.py  test_get_team_daily_score.py  test_get_user_active_time.py  test_get_user_daily_score.py  test_user_active_time.py
tests/tally/track/: test_get_activities.py  test_get_moving_seconds_from_stats.py
(+8 files in other folders)
